[package]
name = "png2saturn"
version = "0.1.0"
edition = "2021"
description = "A tool to create ctb files from png's. Suited to expose pcbs on a Elegoo Saturn."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
catibo = { path = "../catibo"}
png = "0.17.5"
byteorder = "1.4.3"
clap = { version = "3.2.14", features = ["derive"] }
